add membros.html e concepção do layout da pag membros

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link active" href="#">Início</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projetos">Projetos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#membros">Membros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#conteudo-principal">Destaques</a></li>
+                        <li class="nav-item"><a class="nav-link" href="membros.html">Membros</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,7 +39,7 @@
             <h1 class="display-4">Bem-vindo ao nosso Portfólio</h1>
             <p class="lead">Estudantes de Análise e Desenvolvimento de Sistemas</p>
             
-            <a href="#conteudo-principal" class="btn btn-primary btn-lg">Conheça os</a>
+            <a href="membros.html" class="btn btn-primary btn-lg">Conheça os Membros</a>
         </div>
     </section>
 
@@ -186,7 +186,7 @@
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
             <p>&copy; 2025 Nome do Grupo. Todos os direitos reservados.</p>
-            <p>Integrantes: Aluno 1, Aluno 2, Aluno 3, Aluno 4, Aluno 5</p> 
+            <p>Integrantes: Emanuelly da Conceição Vieira Borba, Felipe Alcântara Costa, Matheus Washington Clementino de Almeida, Weslley Gualberto do Carmo Silva</p> 
         </div>
     </footer>
 
